--- a/JAVA/DOC/BJM/TOMI/01/EX/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/10/10.MD
@@ -13,6 +13,10 @@ Hozzuk létre a számokat 1-től 5-ig, tároljuk le azokat változókba, majd ho
 
 ---
 
+[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
 ```java
 package pogrammingPackage;
 public class Programming {
