--- a/JAVA/DOC/BJM/TOMI/02/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/02/01/01.MD
@@ -15,8 +15,8 @@
 
 ---
 
-[IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
 ---
 
 Java example
