--- a/JAVA/DOC/BJM/TOMI/02/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/02/06/06.MD
@@ -16,6 +16,11 @@ tudunk iratni.
 
 ---
 
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
+
+---
+
 Java example
 
 ```java
