--- a/JAVA/DOC/BJM/TOMI/02/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/02/07/07.MD
@@ -16,6 +16,11 @@ akkor pedig kivonni kell. Hogyan nevezné el a paramétereket, hogy jól olvasha
 
 ---
 
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
+
+---
+
 Java example
 
 ```java
