--- a/JAVA/DOC/BJM/TOMI/02/11/11.MD
+++ b/JAVA/DOC/BJM/TOMI/02/11/11.MD
@@ -16,6 +16,11 @@ befejeződik, hívja meg saját magát a megnövelt paraméter értékkel. Mi le
 
 ---
 
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
+
+---
+
 ```java
 package pogrammingPackage;
 public class Programming {
