--- a/JAVA/DOC/BJM/TOMI/02/12/12.MD
+++ b/JAVA/DOC/BJM/TOMI/02/12/12.MD
@@ -15,6 +15,11 @@
 
 ---
 
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
+
+---
+
 ```java
 public class HelloWorld{
 
