--- a/JAVA/DOC/BJM/TOMI/02/14/14.MD
+++ b/JAVA/DOC/BJM/TOMI/02/14/14.MD
@@ -13,9 +13,22 @@
 
 ---
 
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
+
+---
+
 Java example
 
 ```java
+
+```
+
+---
+
+Python example
+
+```python
 
 ```
 
