--- a/JAVA/DOC/BJM/TOMI/02/23/23.MD
+++ b/JAVA/DOC/BJM/TOMI/02/23/23.MD
@@ -13,6 +13,11 @@
 
 ---
 
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | 
+[P IDE](https://repl.it/@ttltrknet/UnhealthySpryDeadcode)
+
+---
+
 Java example
 
 ```java
