--- a/JAVA/DOC/BJM/TOMI/02/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/02/15/15.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 14](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/14/14.MD) ||
 [16 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/16/16.MD)
 
