--- a/JAVA/DOC/BJM/TOMI/02/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/02/16/16.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 15](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/15/15.MD) ||
 [17 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/17/17.MD)
 
