--- a/JAVA/DOC/BJM/TOMI/02/17/17.MD
+++ b/JAVA/DOC/BJM/TOMI/02/17/17.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 16](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/16/16.MD) ||
 [18 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/18/18.MD)
 
