--- a/JAVA/DOC/BJM/TOMI/02/21/21.MD
+++ b/JAVA/DOC/BJM/TOMI/02/21/21.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 20](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/20/20.MD) ||
 [22 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/22/22.MD)
 
