--- a/JAVA/DOC/BJM/TOMI/02/22/22.MD
+++ b/JAVA/DOC/BJM/TOMI/02/22/22.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 21](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/21/21.MD) ||
 [23 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/23/23.MD)
 
