--- a/JAVA/DOC/BJM/TOMI/02/23/23.MD
+++ b/JAVA/DOC/BJM/TOMI/02/23/23.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 22](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/22/22.MD) ||
 [24 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/24/24.MD)
 
