--- a/JAVA/DOC/BJM/TOMI/02/25/25.MD
+++ b/JAVA/DOC/BJM/TOMI/02/25/25.MD
@@ -26,6 +26,14 @@ Java example
 
 ---
 
+Python example
+
+```python
+
+```
+
+---
+
 [<<< 24](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/24/24.MD) ||
 
 ---
