--- a/JAVA/DOC/BJM/TOMI/02/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/02/02/02.MD
@@ -42,6 +42,27 @@ HelloWorld.java:5: error: incompatible types: possible lossy conversion from dou
 
 ---
 
+Python example
+
+```python
+a = 5.5
+b = 5
+
+print(a, b)
+print(a+b)
+print(a-b)
+print(a*b)
+
+>>>
+5.5 5
+10.5
+0.5
+27.5
+>>>
+```
+
+---
+
 [<<< 01](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/01/01.MD) ||
 [03 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/03/03.MD)
 
