--- a/JAVA/DOC/BJM/TOMI/02/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/02/08/08.MD
@@ -50,6 +50,19 @@ public class Programming {
 
 ---
 
+Python example
+
+```python
+a = 5
+
+print(str(a) + "a")
+
+>>>
+5a
+>>>
+
+---
+
 [<<< 07](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/07/07.MD) ||
 [09 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/09/09.MD)
 
