--- a/JAVA/DOC/BJM/TOMI/05/05.MD
+++ b/JAVA/DOC/BJM/TOMI/05/05.MD
@@ -1,6 +1,16 @@
 
 ---
 
+###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [course manuals](https://github.com/ttltrk/PRG/blob/master/COUR_MAN.MD) - [Java Tech](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/CM/JT.MD) - [Java - PT](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/JJ.MD)
+
+###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [basic manuals](https://github.com/ttltrk/PRG/blob/master/MANUALS.MD) - [Java Tech](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/JT/JT.MD) - [Java](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/OJM/OJM.MD)
+
+---
+
+5th meeting
+
+---
+
 1. Írassa ki az alábbi összehasonlítás eredményét: Ha 5 kisebb egyenlő mint 3 akkor "5<=3" egyébként "5>3"
 2. Negálja meg a fenti feltételt és úgy írassa ki az eredményét. Negálás után melyik ág futott le?
 3. Implementáljon le egy függvényt ami az alábbi logikai kifejezés igazság értékét adja vissza, legyen A, B és C egy boolean bementi paramétere a függvénynek:
