--- a/JAVA/DOC/BJM/TOMI/05/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/05/01/01.MD
@@ -12,6 +12,8 @@
 
 ---
 
+Írassa ki az alábbi összehasonlítás eredményét: Ha 5 kisebb egyenlő mint 3 akkor "5<=3" egyébként "5>3"
+
 ---
 
 [IDE](https://www.tutorialspoint.com/compile_java_online.php)
