--- a/JAVA/DOC/BJM/TOMI/05/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/05/07/07.MD
@@ -4,3 +4,31 @@
 ### 07
 
 ---
+
+Implementálja le a következő logikai vizsgálatot a lehető legkevesebb feltétel vizsgálattal: Ha a paraméterül kapott szám kisebb mint 5, 
+akkor írassuk ki, hogy "Param is smaller than 5", egyébként írassuk ki, hogy "Param is higher or equal than 5". Ha 10-től kisebb akkor 
+írassuk ki, hogy "Param is smaller than 10", egyébként írassuk ki, hogy "Param is higher or equal than 10".
+
+---
+
+```java
+public class HelloWorld{
+     public static void main(String[] args) {
+
+        int a = 11;
+        
+		if (a < 5 && a < 10) 
+		  System.out.println("Param is smaller than 5 and Param is smaller than 10");
+		else if (a >= 5 && a < 10)
+		  System.out.println("Param is higher or equal than 5 and Param is smaller than 10");
+		else
+		  System.out.println("Param is higher or equal than 10");  
+		
+	}
+
+}
+
+>>>
+Param is higher or equal than 10
+>>>
+```
