--- a/JAVA/DOC/BJM/TOMI/05/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/05/07/07.MD
@@ -17,6 +17,10 @@ akkor írassuk ki, hogy "Param is smaller than 5", egyébként írassuk ki, hogy
 
 ---
 
+[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
 ```java
 public class HelloWorld{
      public static void main(String[] args) {
