--- a/JAVA/DOC/BJM/TOMI/05/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/05/06/06.MD
@@ -4,3 +4,30 @@
 ### 06
 
 ---
+
+```java
+public class HelloWorld{
+     public static void main(String[] args) {
+        
+		int a = 12;
+        String b = "13";
+        int c = Integer.parseInt(b);
+        
+        System.out.println(func(a,c));
+        
+     }
+		
+	  private static int func(int first, int second) {
+	      if (first<second)
+		   return first;
+		  else
+		    return second;
+
+	}
+
+}
+
+>>>
+12
+>>>
+```
