--- a/JAVA/DOC/BJM/TOMI/05/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/05/06/06.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Implementáljon le egy függvényt, ami String-ként kap egy számot valamint int-ként is kap egy számot és visszaadja a kisebbet.
+
 ---
 
 [IDE](https://www.tutorialspoint.com/compile_java_online.php)
