--- a/JAVA/DOC/BJM/TOMI/05/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/05/06/06.MD
@@ -32,10 +32,14 @@ public class HelloWorld{
      }
 		
 	  private static int func(int first, int second) {
+		  
+		  int retVal = 0; 
+		  
 	      if (first<second)
-		   return first;
+		    retVal = first;
 		  else
-		    return second;
+			retVal = second;	      
+	      return retVal;
 
 	}
 
