--- a/JAVA/DOC/BJM/TOMI/05/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/05/03/03.MD
@@ -10,3 +10,20 @@
 ### 03
 
 ---
+
+Implementáljon le egy függvényt ami az alábbi logikai kifejezés igazság értékét adja vissza, legyen A, B és C egy boolean bementi 
+paramétere a függvénynek: ((!(!A && B)) || C) Mely A, B és C értékek esetén ad TRUE eredményt a függvény?
+
+---
+
+---
+
+```java
+
+>>>
+
+>>>
+```
+
+---
+
