--- a/JAVA/DOC/BJM/TOMI/05/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/05/04/04.MD
@@ -10,3 +10,13 @@
 ### 04
 
 ---
+
+Implementáljon egy függvényt, ami két boolean paramétert vár és az OR logikai igazságtáblát valósítja meg, de csak az AND és a Negálás logikai műveletét használhatja.
+
+---
+
+```java
+
+```
+
+---
