--- a/JAVA/DOC/BJM/TOMI/05/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/05/04/04.MD
@@ -15,8 +15,11 @@ Implementáljon egy függvényt, ami két boolean paramétert vár és az OR log
 
 ---
 
-```java
+de Morgan’s Law:
 
+```java
+!(a && b) ≡ !a || !b
+!(a || b) ≡ !a && !b
 ```
 
 ---
