--- a/JAVA/DOC/BJM/TOMI/05/05/05.MD
+++ b/JAVA/DOC/BJM/TOMI/05/05/05.MD
@@ -10,3 +10,16 @@
 ### 05
 
 ---
+
+Most implementáljon le egy hasonló függvényt, ami az AND logikai igazsságtáblát valósítja meg, de csak az OR és a Negálás logikai műveletét használhatja.
+
+---
+
+de Morgan’s Law:
+
+```java
+!(a && b) ≡ !a || !b
+!(a || b) ≡ !a && !b
+```
+
+---
