--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -11,7 +11,7 @@
 
 ---
 
-* [Ciklusok]()
+* [Ciklusok](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/CIKLUSOK/CIKLUSOK.MD)
 
 ---
 
