--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -17,7 +17,7 @@
 
 HO examples
 
-* [01]()
+* [01 - for kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/01/01.MD)
 * [02]()
 * [03]()
 * [04]()
