--- a/JAVA/DOC/BJM/TOMI/06/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/06/01/01.MD
@@ -15,6 +15,28 @@
 
 ```java
 
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        int index = 0;
+        int result = 0;
+
+        for(index = 0; index <= 4; index++)
+          {
+          System.out.println("Hello World");
+          } 
+        
+     }
+}
+
+>>>
+Hello World
+Hello World
+Hello World
+Hello World
+Hello World
+>>>
 
 ```
 
