--- a/JAVA/DOC/BJM/TOMI/06/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/06/01/01.MD
@@ -15,7 +15,7 @@
 
 ---
 
-[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) - [P IDE]()
 
 ---
 
@@ -45,5 +45,21 @@ Hello World
 >>>
 
 ```
+
+---
+
+```python
+l = [1, 2, 3, 4, 5]
+
+for element in l:
+    print ("hello world")
+    
+>>>
+hello world
+hello world
+hello world
+hello world
+hello world  
+>>>
 
 ---
