--- a/JAVA/DOC/BJM/TOMI/06/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/06/01/01.MD
@@ -15,7 +15,7 @@
 
 ---
 
-[J IDE](https://www.tutorialspoint.com/compile_java_online.php) - [P IDE]()
+[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
 
