--- a/JAVA/DOC/BJM/TOMI/06/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/06/01/01.MD
@@ -19,6 +19,8 @@
 
 ---
 
+Java Solution
+
 ```java
 
 public class HelloWorld{
@@ -47,6 +49,8 @@ Hello World
 ```
 
 ---
+
+Python Solution
 
 ```python
 l = [1, 2, 3, 4, 5]
