--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -18,7 +18,7 @@
 HO examples
 
 * [01 - for kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/01/01.MD)
-* [02]()
+* [02 - while, do_while kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/02/02.MD)
 * [03]()
 * [04]()
 * [05]()
