--- a/JAVA/DOC/BJM/TOMI/06/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/06/02/02.MD
@@ -10,3 +10,12 @@
 ### 06.02
 
 ---
+
+Írassa ki egymás után ötször, hogy "Hello World", FOR ciklussal
+Írja meg a fenti feladatot a másik két fajta ciklussal is
+
+---
+
+---
+
+
