--- a/JAVA/DOC/BJM/TOMI/06/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/06/02/02.MD
@@ -20,9 +20,61 @@
 
 WHILE
 
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        int index = 0;
+        int result = 0;
+          
+        while(index <= 4)
+          {
+          System.out.println("Hello World");
+          index++;
+          }
+        
+     }
+}
+
+>>>
+Hello World
+Hello World
+Hello World
+Hello World
+Hello World
+>>>
+```
+
 ---
 
 DO_WHILE
+
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        int index = 0;
+        int result = 0;
+          
+        do
+          {
+          System.out.println("Hello World");
+          index++;
+          } while(index <= 4);
+        
+     }
+}
+
+>>>
+Hello World
+Hello World
+Hello World
+Hello World
+Hello World
+>>>
+```
 
 ---
 
