--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -19,7 +19,7 @@ HO examples
 
 * [01 - for kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/01/01.MD)
 * [02 - while, do_while kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/02/02.MD)
-* [03]()
+* [03 - user input](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/03/03.MD)
 * [04]()
 * [05]()
 * [06]()
