--- a/JAVA/DOC/BJM/TOMI/06/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/06/03/03.MD
@@ -16,6 +16,10 @@
 
 ---
 
+Készítsen el egy függvényt, ami a paraméteréül kapott darabszámszor megjeleníti a "Hello World" szöveget
+
+---
+
 Java Solution
 
 ```java
