--- a/JAVA/DOC/BJM/TOMI/06/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/06/03/03.MD
@@ -42,4 +42,15 @@ public class HelloWorld{
 
 Python Solution
 
+```python
+n = int(input("how many times?: "))
+
+print("helloworld " * n)
+
+>>>
+how many times?:  3
+helloworld helloworld helloworld
+>>>
+```
+
 ---
