--- a/JAVA/DOC/BJM/TOMI/06/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/06/03/03.MD
@@ -43,13 +43,15 @@ public class HelloWorld{
 Python Solution
 
 ```python
-n = int(input("how many times?: "))
+n = int(input("hanyszor?: "))
 
-print("helloworld " * n)
+print("helloworld \n" * n )
 
 >>>
-how many times?:  3
-helloworld helloworld helloworld
+hanyszor?:  3
+helloworld 
+helloworld 
+helloworld
 >>>
 ```
 
