--- a/JAVA/DOC/BJM/TOMI/06/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/06/01/01.MD
@@ -11,11 +11,12 @@
 
 ---
 
-1. Írassa ki egymás után ötször, hogy "Hello World", FOR ciklussal
+Írassa ki egymás után ötször, hogy "Hello World", FOR ciklussal
 
 ---
 
-[J IDE](https://www.tutorialspoint.com/compile_java_online.php) | [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
 
