--- a/JAVA/DOC/BJM/TOMI/06/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/06/02/02.MD
@@ -16,9 +16,11 @@
 
 ---
 
-[J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
+
+Java Solution
 
 WHILE
 
