--- a/JAVA/DOC/BJM/TOMI/06/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/06/03/03.MD
@@ -12,11 +12,12 @@
 
 ---
 
-### 06.03
+Készítsen el egy függvényt, ami a paraméteréül kapott darabszámszor megjeleníti a "Hello World" szöveget
 
 ---
 
-Készítsen el egy függvényt, ami a paraméteréül kapott darabszámszor megjeleníti a "Hello World" szöveget
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
 
