--- a/JAVA/DOC/BJM/TOMI/06/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/06/15/15.MD
@@ -10,3 +10,18 @@
 ### 06.15
 
 ---
+
+---
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+Java Solution
+
+---
+
+Python Solution
+
+---
