--- a/JAVA/DOC/BJM/TOMI/06/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/06/04/04.MD
@@ -11,6 +11,25 @@
 
 ---
 
+Implementálja le az alábbi függvény tartalmát, ami 3 paramétert vár:
+
+```
+/**
+* Summarize the integer numbers
+* from firstElem to lastElem with diff steps
+*
+* @param firstElem
+* First element of the Sum
+*
+* @param lastElem
+* Last element of the Sum
+*
+* @param diff
+* Difference between two elements
+*/
+public static void getSumOfIntegers(int firstElem, int lastElem, int diff);
+```
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
