--- a/JAVA/DOC/BJM/TOMI/06/05/05.MD
+++ b/JAVA/DOC/BJM/TOMI/06/05/05.MD
@@ -11,6 +11,17 @@
 
 ---
 
+Implementálja le az alábbi ciklust:
+
+```
+while(true)
+{
+System.out.println("Hello World");
+}
+```
+
+Hányszor íródik ki a "Hello World" szöveg? Miért?
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
