--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Keresse meg a legkisebb közös többszörösét a 81 és 12-nek. Hányszorosa a talált szám a 81-nek és hányszorosa a 12-nek?
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
