--- a/JAVA/DOC/BJM/TOMI/06/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/06/07/07.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Implementáljon egy függvényt, ami betűnként végigiterál egy String-en és megjeleníti az eredményt
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
