--- a/JAVA/DOC/BJM/TOMI/06/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/06/08/08.MD
@@ -11,6 +11,9 @@
 
 ---
 
+Implementáljon rész String kereső függvényt. Az egyik paramétere legyen a teljes String, a második paramétere a keresendő String és a 
+visszatérési értéke adja meg, hogy tartalmazza-e vagy sem
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
