--- a/JAVA/DOC/BJM/TOMI/06/09/09.MD
+++ b/JAVA/DOC/BJM/TOMI/06/09/09.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Cserélje ki a "This is a String" szövegben a " a " szót a "my" szóra. Elvárt végeredmény: "This is my String"
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
