--- a/JAVA/DOC/BJM/TOMI/06/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/06/10/10.MD
@@ -11,6 +11,9 @@
 
 ---
 
+Implementáljon egy függvényt, ami megnézni, hogy a paraméteréül kapott szám benne van-e a Fibonacci számsorozat a paraméteréül kapott első 
+X elemébe. Írassa ki az eredményt!
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
