--- a/JAVA/DOC/BJM/TOMI/06/11/11.MD
+++ b/JAVA/DOC/BJM/TOMI/06/11/11.MD
@@ -11,6 +11,9 @@
 
 ---
 
+Módosítsa úgy az előző feladatot, hogy ne iteráljon végig a paraméterül kapott Fibonacci számsorozat első X elemén, hanem ha megtalálta a 
+keresett számot lépjen ki a ciklusból. Írassa ki az eredményt!
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
