--- a/JAVA/DOC/BJM/TOMI/06/12/12.MD
+++ b/JAVA/DOC/BJM/TOMI/06/12/12.MD
@@ -11,6 +11,9 @@
 
 ---
 
+Implementáljon egy Digitális Órát! Az óra másodperc, perc és óra mutatókkal rendelkezik és a program mindig a 00:00:00 időpontban 
+induljon, majd másodpercenként növelje az időt. Minden másodperc változáskor írassa ki az új időt!
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
