--- a/JAVA/DOC/BJM/TOMI/06/13/13.MD
+++ b/JAVA/DOC/BJM/TOMI/06/13/13.MD
@@ -11,6 +11,13 @@
 
 ---
 
+Valósítson meg egy függvényt, ami addig generál 1 és 10 közötti Random számot, amíg a Random szám értéke meg nem egyezik a paraméterül 
+kapott szám értékével.
+
+*  Ellenőrizze a paramétert, hogy a megfelelő értéktartományban van-e (1 <= Param <= 10)
+*  Hajtsa végre többször a programot ugyanarra a paraméterre!
+*  Általában hány Random szám generálás szükséges?
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
