--- a/JAVA/DOC/BJM/TOMI/06/14/14.MD
+++ b/JAVA/DOC/BJM/TOMI/06/14/14.MD
@@ -11,6 +11,15 @@
 
 ---
 
+A 21-es feladatban létrehozott Digitális Óra segítségével mérje meg, hogy mennyi idő alatt melegszik fel egy X fokos pohár víz a levegő Y hőmérsékletére, ha a víz hőmérséklete másodpercenként változhat csak. Az alábbi feltételezéssel éljen:
+
+* ```Y >= X```
+* ```Felfelé kerekítsen, ha szükséges```
+
+A víz melegedése az alábbi egyenlettel írható le:
+
+```f(x,y,delta_t) = x + ((y-x)/(2*delta_t))```
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
