--- a/JAVA/DOC/BJM/TOMI/06/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/06/15/15.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Hozzon létre egy int tömböt a természetes számoknak 1-től 10-ig!
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
