--- a/JAVA/DOC/BJM/TOMI/06/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/06/16/16.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Iteráljon végig a tömbön és írassa ki a tömb egyes elemeinek értékét!
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
