--- a/JAVA/DOC/BJM/TOMI/06/17/17.MD
+++ b/JAVA/DOC/BJM/TOMI/06/17/17.MD
@@ -11,6 +11,8 @@
 
 ---
 
+Valósítson meg egy rendező függvényt, ami egy int tömböt vár és növekvő sorrendbe rendezi!
+
 ---
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
