--- a/JAVA/DOC/BJM/TOMI/06/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/06/07/07.MD
@@ -15,16 +15,23 @@ Implementáljon egy függvényt, ami betűnként végigiterál egy String-en é
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
 
