--- a/JAVA/DOC/BJM/TOMI/06/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/06/08/08.MD
@@ -16,15 +16,27 @@ visszatérési értéke adja meg, hogy tartalmazza-e vagy sem
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+[<<< 07](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/07/07.MD) ||
+[09 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/09/09.MD)
 
 ---
