--- a/JAVA/DOC/BJM/TOMI/06/09/09.MD
+++ b/JAVA/DOC/BJM/TOMI/06/09/09.MD
@@ -15,15 +15,27 @@ Cserélje ki a "This is a String" szövegben a " a " szót a "my" szóra. Elvár
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+[<<< 08](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD) ||
+[10 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/10/10.MD)
 
 ---
