--- a/JAVA/DOC/BJM/TOMI/06/11/11.MD
+++ b/JAVA/DOC/BJM/TOMI/06/11/11.MD
@@ -16,15 +16,27 @@ keresett számot lépjen ki a ciklusból. Írassa ki az eredményt!
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+[<<< 10](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/10/10.MD) ||
+[12 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/12/12.MD)
 
 ---
