--- a/JAVA/DOC/BJM/TOMI/06/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/06/02/02.MD
@@ -16,11 +16,6 @@
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
 
 WHILE
@@ -51,6 +46,8 @@ Hello World
 >>>
 ```
 
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
+
 ---
 
 DO_WHILE
@@ -80,6 +77,28 @@ Hello World
 Hello World
 >>>
 ```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
+
+---
+
+Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
 
 ---
 
