--- a/JAVA/DOC/BJM/TOMI/06/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/06/02/02.MD
@@ -16,9 +16,7 @@
 
 ---
 
-Java Solution
-
-WHILE
+Java Solution - WHILE
 
 ```java
 public class HelloWorld{
@@ -50,7 +48,7 @@ Hello World
 
 ---
 
-DO_WHILE
+Java Solution - DO_WHILE
 
 ```java
 public class HelloWorld{
