--- a/JAVA/DOC/BJM/TOMI/06/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/06/04/04.MD
@@ -32,16 +32,33 @@ public static void getSumOfIntegers(int firstElem, int lastElem, int diff);
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE]()
 
 ---
 
