--- a/JAVA/DOC/BJM/TOMI/06/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/06/04/04.MD
@@ -35,7 +35,43 @@ public static void getSumOfIntegers(int firstElem, int lastElem, int diff);
 Java Solution
 
 ```java
+/**
+* Summarize the integer numbers
+* from firstElem to lastElem with diff steps
+* 1+2+3+4+5
+*
+* @param firstElem
+* First element of the Sum
+* 1
+*
+* @param lastElem
+* Last element of the Sum
+* 5
+*
+* @param diff
+* Difference between two elements
+* 5-1
+*/
 
+public class HelloWorld{
+
+    public static void main(String []args){
+        
+        int first = 1;
+        int last = 5;
+        int d = 1;
+    
+        System.out.println("Hello World");
+        
+    public static void getSumOfIntegers(int firstElem, int lastElem, int diff);
+    
+      for(firstElem = 0; lastElem <= 10; diff++)
+        {
+        result += index;
+        }
+
+     }
+}
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
