--- a/JAVA/DOC/BJM/TOMI/06/05/05.MD
+++ b/JAVA/DOC/BJM/TOMI/06/05/05.MD
@@ -24,16 +24,33 @@ Hányszor íródik ki a "Hello World" szöveg? Miért?
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
 
 ---
 
