--- a/JAVA/DOC/BJM/TOMI/06/05/05.MD
+++ b/JAVA/DOC/BJM/TOMI/06/05/05.MD
@@ -27,7 +27,20 @@ Hányszor íródik ki a "Hello World" szöveg? Miért?
 Java Solution
 
 ```java
+public class HelloWorld{
 
+     public static void main(String []args);    
+     
+       while(true)
+         {
+         System.out.println("Hello World");
+         }
+    }
+}
+
+>>>
+inf.
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
