--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -18,7 +18,25 @@ Keresse meg a legkisebb közös többszörösét a 81 és 12-nek. Hányszorosa a
 Java Solution
 
 ```java
+public class HelloWorld{
 
+    public static void main(String []args){
+     
+    int first = 81;
+    int sec = 12;
+
+    System.out.println("first: " + first);
+    System.out.println("sec: " + sec);
+  
+    int k = first % sec;
+    System.out.println("first%sec: " + k);
+    
+    }
+}
+
+>>>
+
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
