--- a/JAVA/DOC/BJM/TOMI/06/09/09.MD
+++ b/JAVA/DOC/BJM/TOMI/06/09/09.MD
@@ -18,7 +18,20 @@ Cserélje ki a "This is a String" szövegben a " a " szót a "my" szóra. Elvár
 Java Solution
 
 ```java
+public class HelloWorld{
 
+    public static void main(String []args){
+     
+    String s1="This is a String";  
+    String replaceString=s1.replace("a","my");
+    System.out.println(replaceString);  
+    
+    }
+}
+
+>>>
+This is my String
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
