--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -25,7 +25,7 @@ HO examples
 * [06](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/06/06.MD)
 * [07](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/07/07.MD)
 * [08](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD)
-* [09](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/09/09.MD)
+* [09 - replace](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/09/09.MD)
 * [10](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/10/10.MD)
 * [11](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/11/11.MD)
 * [12](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/12/12.MD)
