--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -21,7 +21,7 @@ HO examples
 * [02 - while, do_while kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/02/02.MD)
 * [03 - user input](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/03/03.MD)
 * [04](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/04/04.MD)
-* [05](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/05/05.MD)
+* [05 - infinity cycle](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/05/05.MD)
 * [06](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/06/06.MD)
 * [07](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/07/07.MD)
 * [08](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD)
