--- a/JAVA/DOC/BJM/TOMI/06/17/17.MD
+++ b/JAVA/DOC/BJM/TOMI/06/17/17.MD
@@ -15,16 +15,29 @@ Valósítson meg egy rendező függvényt, ami egy int tömböt vár és növek
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+>>>
+
+>>>
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
 
