--- a/JAVA/DOC/BJM/TOMI/06/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/06/16/16.MD
@@ -15,18 +15,32 @@ Iteráljon végig a tömbön és írassa ki a tömb egyes elemeinek értékét!
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
 
+```python
+
+>>>
+
+>>>
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
 ---
+
 
 [<<< 15](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/15/15.MD) ||
 [17 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/17/17.MD)
