--- a/JAVA/DOC/BJM/TOMI/06/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/06/15/15.MD
@@ -15,18 +15,32 @@ Hozzon létre egy int tömböt a természetes számoknak 1-től 10-ig!
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
 
+```python
+
+>>>
+
+>>>
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
 ---
+
 
 [<<< 14](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/14/14.MD) ||
 [16 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/16/16.MD)
