--- a/JAVA/DOC/BJM/TOMI/06/14/14.MD
+++ b/JAVA/DOC/BJM/TOMI/06/14/14.MD
@@ -22,16 +22,29 @@ A víz melegedése az alábbi egyenlettel írható le:
 
 ---
 
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
-* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
-
----
-
 Java Solution
+
+```java
+
+>>>
+
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
 
 ---
 
 Python Solution
+
+```python
+
+>>>
+
+>>>
+```
+
+* [P IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
 
