--- a/JAVA/DOC/BJM/TOMI/06/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/06/07/07.MD
@@ -35,6 +35,16 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
+
 [<<< 06](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/06/06.MD) ||
 [08 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD)
 
