--- a/JAVA/DOC/BJM/TOMI/06/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/06/10/10.MD
@@ -36,6 +36,16 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
+
 [<<< 09](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/09/09.MD) ||
 [11 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/11/11.MD)
 
