--- a/JAVA/DOC/BJM/TOMI/06/12/12.MD
+++ b/JAVA/DOC/BJM/TOMI/06/12/12.MD
@@ -42,6 +42,16 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
+
 [<<< 11](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/11/11.MD) ||
 [13 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/13/13.MD)
 
