--- a/JAVA/DOC/BJM/TOMI/06/13/13.MD
+++ b/JAVA/DOC/BJM/TOMI/06/13/13.MD
@@ -46,6 +46,16 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
+
 [<<< 12](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/12/12.MD) ||
 [14 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/14/14.MD)
 
