--- a/JAVA/DOC/BJM/TOMI/06/14/14.MD
+++ b/JAVA/DOC/BJM/TOMI/06/14/14.MD
@@ -48,6 +48,16 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
+
 [<<< 13](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/13/13.MD) ||
 [15 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/15/15.MD)
 
