--- a/JAVA/DOC/BJM/TOMI/06/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/06/15/15.MD
@@ -41,6 +41,15 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
 
 [<<< 14](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/14/14.MD) ||
 [16 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/16/16.MD)
