--- a/JAVA/DOC/BJM/TOMI/06/17/17.MD
+++ b/JAVA/DOC/BJM/TOMI/06/17/17.MD
@@ -41,6 +41,16 @@ Python Solution
 
 ---
 
+Shell Script Solution
+
+```shell
+
+```
+
+* [SS IDE](http://rextester.com/l/bash_online_compiler)
+
+---
+
 [<<< 16](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/16/16.MD)
 
 ---
