--- a/JAVA/DOC/BJM/TOMI/06/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/06/15/15.MD
@@ -18,9 +18,38 @@ Hozzon létre egy int tömböt a természetes számoknak 1-től 10-ig!
 Java Solution
 
 ```java
+public class HelloWorld{
 
+     public static void main(String []args){
+        int[] intArray = new int[10];
+        intArray[0] = 1;
+        intArray[1] = 2;
+        intArray[2] = 3;
+        intArray[3] = 4;
+        intArray[4] = 5;
+        intArray[5] = 6;
+        intArray[6] = 7;
+        intArray[7] = 8;
+        intArray[8] = 9;
+        intArray[9] = 10;
+
+        for (int i=0; i<intArray.length; i++)
+          {
+          System.out.println(intArray[i]);
+          }
+     }
+}
 >>>
-
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
 >>>
 ```
 
