--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -31,8 +31,8 @@ HO examples
 * [12](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/12/12.MD)
 * [13](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/13/13.MD)
 * [14](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/14/14.MD)
-* [15 - array](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/15/15.MD)
-* [16](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/16/16.MD)
+* [15 - array 1](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/15/15.MD)
+* [16 - array 2](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/16/16.MD)
 * [17](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/17/17.MD)
 
 ---
