--- a/JAVA/DOC/BJM/TOMI/06/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/06/16/16.MD
@@ -60,7 +60,9 @@ public class HelloWorld{
 Python Solution
 
 ```python
-
+arr = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+print(arr)
+print(arr[4])
 >>>
 
 >>>
