--- a/JAVA/DOC/BJM/TOMI/06/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/06/02/02.MD
@@ -11,8 +11,7 @@
 
 ---
 
-Írassa ki egymás után ötször, hogy "Hello World", FOR ciklussal
-Írja meg a fenti feladatot a másik két fajta ciklussal is
+Írassa ki egymás után ötször, hogy "Hello World", WHILE, DO_WHILE ciklussal.
 
 ---
 
