--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -22,22 +22,34 @@ public class HelloWorld{
 
     public static void main(String []args){
      
-    int first = 81;
-    int sec = 12;
+    int firstNum = 81;
+    int secNum = 12;
+    int two = 2;
+    int three = 3;
+    int modRes_firstNum, modRes_secNum = 0;
 
-    System.out.println("first: " + first);
-    System.out.println("sec: " + sec);
-  
-    int k = first % sec;
-    System.out.println("first%sec: " + k);
+    modRes_firstNum = firstNum % two;
+    System.out.println("Modulo result 81%2: " + modRes_firstNum);
+    
+    modRes_secNum = secNum % two;
+    System.out.println("Modulo result 12%2: " + modRes_secNum);
+    
+    modRes_firstNum = firstNum % three;
+    System.out.println("Modulo result 81%3: " + modRes_firstNum);
+    
+    modRes_secNum = secNum % three;
+    System.out.println("Modulo result 12%3: " + modRes_secNum);
+    
+    
     
     }
 }
 
 >>>
-first: 81
-sec: 12
-first%sec: 9
+Modulo result 81%2: 1
+Modulo result 12%2: 0
+Modulo result 81%3: 0
+Modulo result 12%3: 0
 >>>
 ```
 
