--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -24,32 +24,24 @@ public class HelloWorld{
      
     int firstNum = 81;
     int secNum = 12;
-    int two = 2;
-    int three = 3;
-    int modRes_firstNum, modRes_secNum = 0;
+    int index = 0;
+    int result = 0;
 
-    modRes_firstNum = firstNum % two;
-    System.out.println("Modulo result 81%2: " + modRes_firstNum);
-    
-    modRes_secNum = secNum % two;
-    System.out.println("Modulo result 12%2: " + modRes_secNum);
-    
-    modRes_firstNum = firstNum % three;
-    System.out.println("Modulo result 81%3: " + modRes_firstNum);
-    
-    modRes_secNum = secNum % three;
-    System.out.println("Modulo result 12%3: " + modRes_secNum);
-    
-    
+    for(index = 2; index <= 10; index++)
+      {
+      result += index;
+        if(firstNum % index == 0)
+          {
+          System.out.println(index);
+          }
+       }
     
     }
 }
 
 >>>
-Modulo result 81%2: 1
-Modulo result 12%2: 0
-Modulo result 81%3: 0
-Modulo result 12%3: 0
+3
+9
 >>>
 ```
 
