--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -23,25 +23,29 @@ public class HelloWorld{
     public static void main(String []args){
      
     int firstNum = 81;
-    int secNum = 12;
-    int index = 0;
-    int result = 0;
-
-    for(index = 2; index <= 10; index++)
-      {
-      result += index;
-        if(firstNum % index == 0)
-          {
-          System.out.println(index);
-          }
-       }
     
+    System.out.println(func(firstNum));
+    
+    private static int func(firstNum) {
+        
+      int index = 0;
+      int result = 0;    
+      
+      for(index = 2; index <= 10; index++)
+        {
+        result += index;
+          if(firstNum % index == 0)
+            {
+            return index;
+            }
+        }
+      
     }
+}
 }
 
 >>>
-3
-9
+
 >>>
 ```
 
