--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -23,24 +23,44 @@ public class HelloWorld{
     public static void main(String []args){
      
     int firstNum = 81;
+    int secNum = 12;
     
     System.out.println(func(firstNum));
+    System.out.println(func(secNum));
     
     private static int func(firstNum) {
         
-      int index = 0;
+      int index1 = 0;
       int result = 0;    
       
-      for(index = 2; index <= 10; index++)
+      for(index1 = 2; index1 <= 10; index++)
         {
-        result += index;
-          if(firstNum % index == 0)
+        result += index1;
+          if(firstNum % index1 == 0)
             {
-            return index;
+            return index1;
             }
         }
       
     }
+    
+    private static int func(secNum) {
+        
+      int index2 = 0;
+      int result = 0;    
+      
+      for(index2 = 2; index2 <= 10; index++)
+        {
+        result += index2;
+          if(secNum % index2 == 0)
+            {
+            return index2;
+            }
+        }
+      
+    }
+    
+    
 }
 }
 
