--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -26,14 +26,16 @@ public class HelloWorld{
     int secNum = 12;
     
     System.out.println(func(firstNum));
-    System.out.println(func(secNum));
+    System.out.println(func2(secNum));
     
-    private static int func(firstNum) {
+    }
+    
+    public static int func(int firstNum) {
         
-      int index1 = 0;
+       int index1;
       int result = 0;    
       
-      for(index1 = 2; index1 <= 10; index++)
+      for(index1 = 2; index1 <= 10; index1++)
         {
         result += index1;
           if(firstNum % index1 == 0)
@@ -41,15 +43,15 @@ public class HelloWorld{
             return index1;
             }
         }
-      
+      return 0;
     }
     
-    private static int func(secNum) {
+     public static int func2(int secNum) {
         
       int index2 = 0;
       int result = 0;    
       
-      for(index2 = 2; index2 <= 10; index++)
+      for(index2 = 2; index2 <= 10; index2++)
         {
         result += index2;
           if(secNum % index2 == 0)
@@ -57,15 +59,17 @@ public class HelloWorld{
             return index2;
             }
         }
-      
+    return 0;
+
     }
+
     
-    
-}
+
 }
 
 >>>
-
+3
+2
 >>>
 ```
 
