--- a/JAVA/DOC/BJM/TOMI/06/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06/06.MD
@@ -25,48 +25,45 @@ public class HelloWorld{
     int firstNum = 81;
     int secNum = 12;
     
-    System.out.println(func(firstNum));
+    System.out.println(func1(firstNum));
     System.out.println(func2(secNum));
     
     }
     
-    public static int func(int firstNum) {
+    public static int func1(int firstNum) {
         
-       int index1;
-      int result = 0;    
+    int index1;
+    int result = 0;    
       
-      for(index1 = 2; index1 <= 10; index1++)
-        {
-        result += index1;
-          if(firstNum % index1 == 0)
-            {
-            return index1;
-            }
+    for(index1 = 2; index1 <= 10; index1++)
+      {
+      result += index1;
+        if(firstNum % index1 == 0)
+          {
+          return index1;
+          }
         }
       return 0;
     }
     
-     public static int func2(int secNum) {
+    public static int func2(int secNum) {
         
-      int index2 = 0;
-      int result = 0;    
+    int index2 = 0;
+    int result = 0;    
       
-      for(index2 = 2; index2 <= 10; index2++)
-        {
-        result += index2;
-          if(secNum % index2 == 0)
-            {
-            return index2;
-            }
+    for(index2 = 2; index2 <= 10; index2++)
+      {
+      result += index2;
+        if(secNum % index2 == 0)
+          {
+          return index2;
+          }
         }
-    return 0;
+      return 0;
 
     }
-
     
-
 }
-
 >>>
 3
 2
