--- a/JAVA/DOC/BJM/TOMI/06/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/06/04/04.MD
@@ -53,25 +53,33 @@ Java Solution
 * 5-1
 */
 
-public class HelloWorld{
-
-    public static void main(String []args){
-        
-        int first = 1;
-        int last = 5;
-        int d = 1;
-    
-        System.out.println("Hello World");
-        
-    public static void getSumOfIntegers(int firstElem, int lastElem, int diff);
-    
-      for(firstElem = 0; lastElem <= 10; diff++)
-        {
-        result += index;
-        }
-
-     }
+package pogrammingPackage;
+public class Programming {
+		public static void main(String []args){
+	        
+	        int first = 1;
+	        int last = 5;
+	        int d = 1;
+	    
+	        System.out.println(getSumOfIntegers(1,5,1));
+	        
+		}
+		public static int getSumOfIntegers(int firstElem, int lastElem, int diff) {
+	    
+			int result = 0;
+			int index = 0;
+			
+	      for(index = firstElem; result <= lastElem; index+= diff)
+	        {
+	        result += index;
+	        }
+	      return result;
+	}
 }
+
+>>>
+6
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
