--- a/JAVA/DOC/BJM/TOMI/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/07/07.MD
@@ -11,6 +11,6 @@
 
 ---
 
-* [Java OOP](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/07/OOP/OOP.MD)
+* [OOP](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/07/OOP/OOP.MD)
 
 ---
