--- a/PY/DOC/OPYM/13/07/MAN/01/01.MD
+++ b/PY/DOC/OPYM/13/07/MAN/01/01.MD
@@ -9,9 +9,9 @@
 
 ---
 
-* [1.1 - Your First Program]()
-* [1.2 - Types]()
-* [1.3 - Expressions and Variables]()
-* [1.4 - String Operations]()
+* [1.1 - Your First Program](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/01/11/11.MD)
+* [1.2 - Types](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/01/12/12.MD)
+* [1.3 - Expressions and Variables](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/01/13/13.MD)
+* [1.4 - String Operations](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/01/14/14.MD)
 
 ---
