--- a/PY/DOC/OPYM/13/07/MAN/02/02.MD
+++ b/PY/DOC/OPYM/13/07/MAN/02/02.MD
@@ -9,8 +9,8 @@
 
 ---
 
-* [2.1 - Lists and Tuples]()
-* [2.2 - Sets]()
-* [2.3 - Dictionaries]()
+* [2.1 - Lists and Tuples](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/02/21/21.MD)
+* [2.2 - Sets](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/02/22/22.MD)
+* [2.3 - Dictionaries](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/02/23/23.MD)
 
 ---
