--- a/PY/DOC/OPYM/13/07/MAN/03/03.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/03.MD
@@ -8,3 +8,10 @@
 ### Python Programming Fundamentals
 
 ---
+
+* [3.1 - Conditions and Branching](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/03/31/31.MD)
+* [3.2 - Loops](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/03/32/32.MD)
+* [3.3 - Functions](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/03/33/33.MD)
+* [3.4 - Objects and Classes](https://github.com/ttltrk/PRG/blob/master/PY/DOC/OPYM/13/07/MAN/03/34/34.MD)
+
+---
