--- a/PY/DOC/OPYM/13/07/MAN/01/11/11.MD
+++ b/PY/DOC/OPYM/13/07/MAN/01/11/11.MD
@@ -8,3 +8,28 @@
 ### Your First Program
 
 ---
+
+```python
+print ("hello world")
+
+>>>
+hello world
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+#print ("hello world")
+print ("hello world")
+
+>>>
+hello world
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
