--- a/PY/DOC/OPYM/13/07/MAN/01/13/13.MD
+++ b/PY/DOC/OPYM/13/07/MAN/01/13/13.MD
@@ -8,3 +8,36 @@
 ### Expressions and Variables
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
