--- a/PY/DOC/OPYM/13/07/MAN/02/21/21.MD
+++ b/PY/DOC/OPYM/13/07/MAN/02/21/21.MD
@@ -8,3 +8,36 @@
 ### Lists and Tuples
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
