--- a/PY/DOC/OPYM/13/07/MAN/03/31/31.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/31/31.MD
@@ -8,3 +8,36 @@
 ### Conditions and Branching
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
