--- a/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/33/33.MD
@@ -8,3 +8,36 @@
 ### Functions
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
