--- a/PY/DOC/OPYM/13/07/MAN/03/34/34.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/34/34.MD
@@ -8,3 +8,36 @@
 ### Objects and Classes
 
 ---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
