--- a/PY/DOC/OPYM/13/07/MAN/03/31/31.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/31/31.MD
@@ -9,9 +9,11 @@
 
 ---
 
-|i>5| 1| 2| 3| 4| 5| 6| 7| 8| 9|10|
+i>5
+
+| i=| 1| 2| 3| 4| 5| 6| 7| 8| 9|10|
 |---|--|--|--|--|--|--|--|--|--|--|
-|   | x| x| x| x| x|ok|ok|ok|ok|ok|
+|res| f| f| f| f| f| t| t| t| t| t|
 
 ```python
 
