--- a/PY/DOC/OPYM/13/07/MAN/03/31/31.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/31/31.MD
@@ -39,14 +39,30 @@ NOT
 
 | A| B|A!=B|
 |--|--|----|
-| 1| 0|True|
-| 0| 1|True|
+| T| F|   T|
+| F| T|   T|
+| T| T|   F|
+| F| F|   F|
 
 OR
 
-
+| A| B|A or B|
+|--|--|----|
+| T| F|   T|
+| F| T|   T|
+| T| T|   T|
+| F| F|   F|
 
 AND
+
+| A| B|A and B|
+|--|--|----|
+| T| F|   F|
+| F| T|   F|
+| T| T|   T|
+| F| F|   F|
+
+---
 
 ```python
 
