--- a/PY/DOC/OPYM/13/07/MAN/03/32/32.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/32/32.MD
@@ -9,10 +9,25 @@
 
 ---
 
+range(3) = [0,1,2]
+range(10,15) = [10,11,12,13,14]
+
+---
+
+FOR LOOPS
+
+---
+
 ```python
+sqr = ["red", "yellow", "green", "purple", "blue"]
 
+for i in range(0,5):
+  sqr[i] = "white"
+
+print(sqr)
+  
 >>>
-
+['white', 'white', 'white', 'white', 'white']
 >>>
 ```
 
@@ -21,9 +36,33 @@
 ---
 
 ```python
+sqrs = ["red", "yellow", "green"]
+
+for sqr in sqrs:
+  sqr
+
+print(sqr)
 
 >>>
+green
+>>>
+```
 
+* [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
+
+---
+
+```python
+sqrs = ["red", "yellow", "green"]
+
+for i,sqr in enumerate(sqrs):
+  sqr
+  i
+
+print(sqr)
+
+>>>
+green
 >>>
 ```
 
