--- a/PY/DOC/OPYM/13/07/MAN/03/32/32.MD
+++ b/PY/DOC/OPYM/13/07/MAN/03/32/32.MD
@@ -72,13 +72,28 @@ green
 
 ---
 
+WHILE LOOPS
+
+---
+
 ```python
+sqrs = ["orange", "orange", "purple", "blue"]
+
+new_sqrs = []
+i = 0
+
+while (sqrs[i]=="orange"):
+  new_sqrs.append(sqrs[i])
+
+  i = i+1
+print(new_sqrs)
 
 >>>
-
+['orange', 'orange']
 >>>
 ```
 
 * [Py IDE](https://repl.it/@ttltrknet/YummyRedMp3)
 
 ---
+
